--- a/gallery.html
+++ b/gallery.html
@@ -258,16 +258,16 @@ body{
   <div class="gallery" id="gallery">
 
     <!-- Your images -->
-    <div class="item"><img src="Shadu.jpg"></div>
-    <div class="item"><img src="Shadu1.jpg"></div>
-    <div class="item"><img src="Shadu2.jpg"></div>
-    <div class="item"><img src="Shadu3.jpg"></div>
-    <div class="item"><img src="Shadu4.jpg"></div>
-    <div class="item"><img src="Shadu5.jpg"></div>
-    <div class="item"><img src="Shadu6.jpg"></div>
-    <div class="item"><img src="Shadu7.jpg"></div>
-    <div class="item"><img src="Shadu8.jpg"></div>
-    <div class="item"><img src="Shadu9.jpg"></div>
+    <div class="item"><img src="shadu.jpg"></div>
+    <div class="item"><img src="shadu1.jpg"></div>
+    <div class="item"><img src="shadu2.jpg"></div>
+    <div class="item"><img src="shadu3.jpg"></div>
+    <div class="item"><img src="shadu4.jpg"></div>
+    <div class="item"><img src="shadu5.jpg"></div>
+    <div class="item"><img src="shadu6.jpg"></div>
+    <div class="item"><img src="shadu7.jpg"></div>
+    <div class="item"><img src="shadu8.jpg"></div>
+    <div class="item"><img src="shadu9.jpg"></div>
     <div class="item"><img src="shadu10.jpg"></div>
     <div class="item"><img src="shadu11.jpg"></div>
     <div class="item"><img src="shadu12.jpg"></div>
@@ -277,7 +277,7 @@ body{
     <div class="item"><img src="shadu16.jpg"></div>
     <div class="item"><img src="shadu17.jpg"></div>
     <div class="item"><img src="shadu18.jpg"></div>
-    <div class="item"><img src="Shadu19.jpg"></div>
+    <div class="item"><img src="shadu19.jpg"></div>
 
   </div>
 </div>
@@ -388,3 +388,4 @@ document.getElementById("year").textContent = new Date().getFullYear();
 
 </body>
 </html>
+
