--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ One day, it becomes your biggest strength"
 
   <div>
     <div class="portrait-wrap">
-      <img src="Shadu1.jpg" alt="">
+      <img src="shadu1.jpg" alt="">
     </div>
   </div>
 
@@ -264,3 +264,4 @@ document.getElementById("year").textContent = new Date().getFullYear();
 
 </body>
 </html>
+
